# sandbox-cdf

./: .gitignore  FluidDynamics.ipynb  ShallowWaterEquations.ipynb  ShallowWaterEquations1D-surface.ipynb  ShallowWaterEquations1D.ipynb  ShallowWaterEquations2D.ipynb  Water1D.ipynb  drawarray.py  install.ps1  mathematica.nb  pyproject.toml
